<resources>
    <string name="app_name">AppBanHang</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="signup">ĐĂNG KÝ</string>
    <string name="home">Trang chủ</string>
    <string name="logout">Đăng xuất</string>
    <string name="order">Đơn hàng</string>
    <string name="person">Người dùng</string>
    <string name="setting">Cài đặt</string>
    <string name="contact">Liên hệ</string>
    <string name="post">Tin tức</string>
    <string name="thuonghieu">Thương hiệu:</string>
    <string name="quantity">Số lượng còn:</string>
    <string name="price">Giá:</string>


    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
</resources>