<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@color/white"
    tools:openDrawer="start">

    <LinearLayout
        android:id="@+id/hihi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/pink"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_back"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_gravity="center_vertical"
                        android:paddingEnd="15dp"
                        android:src="@drawable/baseline_arrow_back_ios_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Chi tiết sản phẩm"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="25sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="right"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgsearch"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_search_24" />

                    <FrameLayout
                        android:id="@+id/framegiohang"
                        android:layout_width="55dp"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp">

                        <com.nex3z.notificationbadge.NotificationBadge
                            android:id="@+id/menu_sl"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="top|right" />

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/ic_cart_24" />
                    </FrameLayout>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Image of the product -->
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="190dp" />

                <!-- Product Name -->
                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Tên sản phẩm"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thuonghieu"
                        android:textColor="@color/red"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/product_thuonghieu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginStart="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
                <!-- Product Price -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text=""
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <WebView
                    android:id="@+id/product_description_webview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="8dp" />
                <!-- Add to Cart Button -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_to_cart_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/btn_add_cart"
                        android:gravity="center"
                        android:text="  Thêm vào giỏ  " />


                    <Button
                        android:id="@+id/btn_buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_buy_now"
                        android:gravity="center"
                        android:text="    Mua ngay    " />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bình luận"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <!-- User Comment Input -->
                    <EditText
                        android:id="@+id/et_user_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="Nhập bình luận của bạn..."
                        android:background="@drawable/rounded_edittext"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <Button
                        android:id="@+id/btn_submit_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Gửi"
                        android:background="@drawable/btn_submit"
                        android:padding="10dp" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_comments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:scrollbars="vertical" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
